tests/snapshots/compile__wgsl_effect_kuwahara_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_mix5_amount: f32,
    u_control_rgba4_a: f32,
    u_control_rgba4_b: f32,
    u_control_rgba4_g: f32,
    u_opt_mix5_curve: i32,
    u_opt_mix5_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn kuwahara1_color(uv: vec2f) -> vec4f {
    let kernelStep = vec2f(1.0) / 720.0;
    let quadrant = 16.0;
    var mean = array<vec3f, 4>();
    var square = array<vec3f, 4>();
    var centerAlpha = 1.0;
    var offset = vec2f(0.0);
    for (var y = -3; y <= 3; y++) {
        for (var x = -3; x <= 3; x++) {
            offset = vec2f(f32(x), f32(y)) * kernelStep;
            let sampled = checkerboard3_output(uv + offset);
            if (x == 0 && y == 0) { centerAlpha = sampled.a; }
            let c = sampled.rgb;
            if (x <= 0 && y <= 0) { mean[0] += c; square[0] += c * c; }
            if (x >= 0 && y <= 0) { mean[1] += c; square[1] += c * c; }
            if (x <= 0 && y >= 0) { mean[2] += c; square[2] += c * c; }
            if (x >= 0 && y >= 0) { mean[3] += c; square[3] += c * c; }
        }
    }
    var flattest = mean[0] / quadrant;
    var roughness = dot(square[0] / quadrant - flattest * flattest, vec3f(1.0));
    for (var q = 1; q < 4; q++) {
        let m = mean[q] / quadrant;
        let v = dot(square[q] / quadrant - m * m, vec3f(1.0));
        if (v < roughness) { roughness = v; flattest = m; }
    }
    return vec4f(flattest, centerAlpha);
}

fn kuwahara1_value(uv: vec2f) -> f32 {
    let kernelStep = vec2f(1.0) / 720.0;
    let quadrant = 16.0;
    var mean = array<vec3f, 4>();
    var square = array<vec3f, 4>();
    var centerAlpha = 1.0;
    var offset = vec2f(0.0);
    for (var y = -3; y <= 3; y++) {
        for (var x = -3; x <= 3; x++) {
            offset = vec2f(f32(x), f32(y)) * kernelStep;
            let sampled = checkerboard3_output(uv + offset);
            if (x == 0 && y == 0) { centerAlpha = sampled.a; }
            let c = sampled.rgb;
            if (x <= 0 && y <= 0) { mean[0] += c; square[0] += c * c; }
            if (x >= 0 && y <= 0) { mean[1] += c; square[1] += c * c; }
            if (x <= 0 && y >= 0) { mean[2] += c; square[2] += c * c; }
            if (x >= 0 && y >= 0) { mean[3] += c; square[3] += c * c; }
        }
    }
    var flattest = mean[0] / quadrant;
    var roughness = dot(square[0] / quadrant - flattest * flattest, vec3f(1.0));
    for (var q = 1; q < 4; q++) {
        let m = mean[q] / quadrant;
        let v = dot(square[q] / quadrant - m * m, vec3f(1.0));
        if (v < roughness) { roughness = v; flattest = m; }
    }
    return clamp(roughness, 0.0, 1.0);
}

fn rgba4_output(uv: vec2f) -> vec4f {
    return vec4f(kuwahara1_value(uv), u.u_control_rgba4_g, u.u_control_rgba4_b, u.u_control_rgba4_a);
}

fn mix5_output(uv: vec2f) -> vec4f {
    let a = kuwahara1_color(uv);
    let b = rgba4_output(uv);
    let amt = clamp(u.u_control_mix5_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix5_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix5_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix5_output(uv);
}
