tests/snapshots/compile__wgsl_effect_mosaic_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_mosaic1_borderColor: vec4f,
    u_control_mosaic1_borderWidth: f32,
    u_control_mosaic1_cellSize: f32,
    u_control_mosaic1_randomness: f32,
    u_control_mosaic1_smoothing: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn mosaicJitter(cell: vec2f) -> vec2f {
    return vec2f(
        fract(sin(dot(cell, vec2f(12.9898, 78.233))) * 43758.5453),
        fract(sin(dot(cell, vec2f(269.5, 183.3))) * 43758.5453));
}

fn mosaic1_color(uv: vec2f) -> vec4f {
    let cellSize = max(u.u_control_mosaic1_cellSize, 1e-3);
    let randomness = clamp(u.u_control_mosaic1_randomness, 0.0, 1.0);
    let borderWidth = u.u_control_mosaic1_borderWidth;
    let smoothing = max(u.u_control_mosaic1_smoothing, 1e-4);
    let p = uv * cellSize;
    let cell = floor(p);
    let f = fract(p);
    let cellCenter = (cell + 0.5 + (mosaicJitter(cell) - 0.5) * randomness) / cellSize;
    let edge = min(min(f.x, f.y), min(1.0 - f.x, 1.0 - f.y));
    let mask = smoothstep(borderWidth - smoothing * 0.5, borderWidth + smoothing * 0.5, edge);
    return mix(u.u_control_mosaic1_borderColor, defaultUvMap(cellCenter), mask);
}

fn mosaic1_mask(uv: vec2f) -> f32 {
    let cellSize = max(u.u_control_mosaic1_cellSize, 1e-3);
    let randomness = clamp(u.u_control_mosaic1_randomness, 0.0, 1.0);
    let borderWidth = u.u_control_mosaic1_borderWidth;
    let smoothing = max(u.u_control_mosaic1_smoothing, 1e-4);
    let p = uv * cellSize;
    let cell = floor(p);
    let f = fract(p);
    let cellCenter = (cell + 0.5 + (mosaicJitter(cell) - 0.5) * randomness) / cellSize;
    let edge = min(min(f.x, f.y), min(1.0 - f.x, 1.0 - f.y));
    let mask = smoothstep(borderWidth - smoothing * 0.5, borderWidth + smoothing * 0.5, edge);
    return mask;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(mosaic1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a));
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = mosaic1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
